--- a/news/templates/news/currentnews.html
+++ b/news/templates/news/currentnews.html
@@ -4,7 +4,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-md-10">
             {% if news %}
-                 <h1>{{ news.count }} Current News{{ news.count|pluralize }}</h1>
+                 <h1>{{ news.count }} Current News</h1>
             {% else %}
                            <h1>Current News</h1>
             {% endif %}
